--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   "license": "MIT",
   "dependencies": {
     "assetmanager": "^1.2.2",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
     "bower": "^1.7.7",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.17.1",
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0",
     "underscore": "^1.8.3",
     "universal-analytics": "^0.3.10"
   },
